<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExpression"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:text="@string/string_zero"/>


    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:hint="@string/_0"
        android:text="@string/_0"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tvExpression"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvExpression"
        app:layout_constraintTop_toBottomOf="@id/tvExpression" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv7"
        style="@style/numberButtonStyle"
        android:layout_height="0dp"
        android:text="@string/_7"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:layout_constraintWidth_percent="0.25" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv8"
        style="@style/numberButtonStyle"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_8"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toEndOf="@+id/tv7"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv9"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@id/tv8"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvX"
        android:layout_height="0dp"
        android:background="@color/actionButton"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/ActionButtonStyle"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv4"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_4"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv7"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv5"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@id/tv7"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv6"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@id/tv5"
        app:layout_constraintTop_toBottomOf="@id/tv7"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvMinus"
        android:layout_height="0dp"
        android:background="@color/actionButton"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/ActionButtonStyle"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvX"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv0"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.50"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvDot"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/dot"
        app:layout_constraintStart_toEndOf="@id/tv0"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvEqual"
        android:layout_height="0dp"
        android:background="@color/actionButton"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/ActionButtonStyle"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlus"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv1"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv2"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv3"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/numberButtonStyle"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvPlus"
        android:layout_height="0dp"
        android:background="@color/actionButton"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.15"
        style="@style/ActionButtonStyle"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        />


</androidx.constraintlayout.widget.ConstraintLayout>